--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.9",
+    "moment": "^2.22.1",
     "vue": "^2.5.16",
     "vue-form-validator": "0.0.3",
     "vue-router": "^3.0.1"
